[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/slime_enemy.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemies/SlimeBoss.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 7.0

[sub_resource type="CircleShape2D" id=7]
radius = 124.169

[node name="SlimeBoss" type="KinematicBody2D"]
visible = false
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -11 )
scale = Vector2( 1.72, 1.72 )
frames = SubResource( 5 )
animation = "Walk"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 6 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 7 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="HealthBar" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="HealthBar"]
margin_left = -18.0
margin_top = -31.0
margin_right = 18.0
margin_bottom = -15.0
theme = ExtResource( 3 )
value = 100.0

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
